NetBSD Problem Report #50873

From www@NetBSD.org  Mon Feb 29 17:45:51 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id ED2AB7ABE8
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 29 Feb 2016 17:45:50 +0000 (UTC)
Message-Id: <20160229174550.1EE227ACD3@mollari.NetBSD.org>
Date: Mon, 29 Feb 2016 17:45:50 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.bin/netstat/vtw.c: 4 * weird coding ?
X-Send-Pr-Version: www-1.0

>Number:         50873
>Category:       bin
>Synopsis:       src/usr.bin/netstat/vtw.c: 4 * weird coding ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 29 17:50:00 +0000 2016
>Closed-Date:    Mon Feb 29 20:41:01 +0000 2016
>Last-Modified:  Mon Feb 29 20:41:01 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160229
>Organization:
>Environment:
>Description:

1.

src/usr.bin/netstat/vtw.c:272]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses.

Source code is

       if (!kbase | !klim)


Looks weird. Did someone muxup | and || ?

2.

src/usr.bin/netstat/vtw.c:303]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses.

    if (!base | !lim)


Duplicate

3.

src/usr.bin/netstat/vtw.c:372]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses.

  if (!kbase | !klim)


4.

src/usr.bin/netstat/vtw.c:402]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses.

   if (!base | !lim)

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50873 CVS commit: src/usr.bin/netstat
Date: Mon, 29 Feb 2016 13:19:46 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Feb 29 18:19:46 UTC 2016

 Modified Files:
 	src/usr.bin/netstat: vtw.c

 Log Message:
 PR/50873: David Binderman: use logical or instead of arithmetic


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/usr.bin/netstat/vtw.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Mon, 29 Feb 2016 20:41:01 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.