PR/50873: David Binderman: use logical or instead of arithmetic